// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message empty 1`] = `
<div
  className="css-fomzvs-messageWrapClass"
>
  <p
    className="css-7kpzh9-messageTextClass"
  />
  <button
    className="css-1m0zv91-dismissButtonClass"
    onClick={[Function]}
    type="button"
  />
</div>
`;

exports[`Message text 1`] = `
<div
  className="css-fomzvs-messageWrapClass"
>
  <p
    className="css-7kpzh9-messageTextClass"
  >
    This is an admin message.
  </p>
  <button
    className="css-1m0zv91-dismissButtonClass"
    onClick={[Function]}
    type="button"
  />
</div>
`;
